--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Gotta start somewhere...",
   "main": "index.js",
   "scripts": {
-    "prestart": "npm run clean && concurrently \"npm run build:html\" \"npm run build:css\" \"npm run build:js\"",
+    "prestart": "npm run clean && npm run html && concurrently \"npm run css\" \"npm run js\"",
     "clean": "rimraf dist",
-    "build:html": "mkdirp dist && cp src/index.html dist/",
-    "build:css": "mkdirp dist/css && npm run sass-to-css",
-    "sass-to-css": "node-sass --quiet --output-style compressed src/scss/index.scss dist/css/styles.min.css",
-    "build:js": "mkdirp dist/js && npm run bundle-js",
-    "bundle-js": "browserify --entry src/js/index.js | uglifyjs --mangle --compress > dist/js/bundle.min.js",
+    "html": "mkdirp dist && npm run html:copy",
+    "html:copy": "cp src/index.html dist/",
+    "css": "mkdirp dist/css && npm run css:from-sass",
+    "css:from-sass": "node-sass --quiet --output-style compressed src/scss/index.scss dist/css/styles.min.css",
+    "js": "mkdirp dist/js && npm run js:bundle",
+    "js:bundle": "browserify --transform vueify --entry src/js/index.js | uglifyjs --mangle --compress > dist/js/bundle.min.js",
     "start": "npm run dev-server",
     "dev-server": "light-server --quiet --serve dist --port 1337 --open --watchexp \"src/** # npm run prestart # reload\""
   },
@@ -29,8 +30,9 @@
     "concurrently": "^3.6.1",
     "light-server": "^2.5.1",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.3",
     "rimraf": "^2.6.2",
-    "uglify-es": "^3.3.9"
+    "uglify-es": "^3.3.9",
+    "vueify": "^9.4.1"
   }
 }
