--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "boilerplates",
   "version": "1.0.0",
   "description": "Gotta start somewhere...",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "npm run dev-server",
     "prestart": "npm run clean && npm run html && concurrently \"npm run css\" \"npm run js\"",
     "clean": "rimraf dist",
     "html": "mkdirp dist && npm run html:copy",
@@ -12,7 +13,6 @@
     "css:from-sass": "node-sass --quiet --output-style compressed src/scss/index.scss dist/css/styles.min.css",
     "js": "mkdirp dist/js && npm run js:bundle",
     "js:bundle": "browserify --transform vueify --entry src/js/index.js | uglifyjs --mangle --compress > dist/js/bundle.min.js",
-    "start": "npm run dev-server",
     "dev-server": "light-server --quiet --serve dist --port 1337 --open --watchexp \"src/** # npm run prestart # reload\""
   },
   "repository": {
@@ -34,5 +34,8 @@
     "rimraf": "^2.6.2",
     "uglify-es": "^3.3.9",
     "vueify": "^9.4.1"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
