--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "css": "mkdirp dist/css && npm run css:from-sass",
     "css:from-sass": "node-sass --quiet --output-style compressed src/scss/index.scss dist/css/styles.min.css",
     "js": "mkdirp dist/js && npm run js:bundle",
-    "js:bundle": "browserify --transform vueify --entry src/js/index.js | uglifyjs --mangle --compress > dist/js/bundle.min.js",
+    "js:bundle": "browserify --transform [ babelify --presets [ @babel/preset-env @babel/preset-react ] ] --entry src/js/index.js | uglifyjs --mangle --compress > dist/js/bundle.min.js",
     "dev-server": "light-server --quiet --serve dist --port 1337 --open --watchexp \"src/** # npm run prestart # reload\""
   },
   "repository": {
@@ -26,6 +26,10 @@
   },
   "homepage": "https://github.com/Jase-B/boilerplates#readme",
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "babelify": "^10.0.0",
     "browserify": "^16.2.3",
     "concurrently": "^3.6.1",
     "html-minifier": "^3.5.21",
@@ -33,10 +37,11 @@
     "mkdirp": "^0.5.1",
     "node-sass": "^4.11.0",
     "rimraf": "^2.6.2",
-    "uglify-es": "^3.3.9",
-    "vueify": "^9.4.1"
+    "uglify-es": "^3.3.9"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
