--- a/web_app/package.json
+++ b/web_app/package.json
@@ -29,6 +29,7 @@
     "light-server": "^2.6.3",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
+    "onchange": "^6.0.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.19.3",
     "rollup-plugin-babel": "^4.3.3",
@@ -43,12 +44,11 @@
     "url": "git+https://github.com/Jase-B/boilerplates.git"
   },
   "scripts": {
-    "start": "npm run dev-server",
-    "prestart": "npm-run-all clean --parallel build:*",
+    "start": "npm-run-all clean --parallel build:* --serial dev-server",
     "clean": "rimraf dist/{*.html,css/*.css,js/*.js}",
     "build:html": "html-minifier $npm_package_config_html_minifier_opts src/index.html --output dist/index.html",
     "build:css": "node-sass --quiet --output-style compressed src/scss/index.scss dist/css/styles.min.css",
-    "build:js": "rollup --compact --config --watch",
+    "build:js": "rollup --compact --config --silent",
     "dev-server": "light-server --quiet --serve dist --port $npm_package_config_port --open --watchexp \"src/** # npm run prestart # reload\""
   },
   "version": "1.0.0"
