--- a/web_app/package.json
+++ b/web_app/package.json
@@ -17,21 +17,18 @@
   },
   "description": "Gotta start somewhere...",
   "dependencies": {
-    "express": "^4.17.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "babel-preset-minify": "^0.5.0",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "babel-preset-minify": "^0.5.1",
     "html-minifier": "^4.0.0",
     "light-server": "^2.6.3",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^6.0.0",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.19.3",
+    "rollup": "^1.21.2",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-resolve": "^5.2.0"
   },
@@ -44,12 +41,14 @@
     "url": "git+https://github.com/Jase-B/boilerplates.git"
   },
   "scripts": {
-    "start": "npm-run-all clean --parallel build:* --serial dev-server",
-    "clean": "rimraf dist/{*.html,css/*.css,js/*.js}",
+    "start": "npm-run-all --parallel build:* --parallel watch:* dev-server",
     "build:html": "html-minifier $npm_package_config_html_minifier_opts src/index.html --output dist/index.html",
     "build:css": "node-sass --quiet --output-style compressed src/scss/index.scss dist/css/styles.min.css",
     "build:js": "rollup --compact --config --silent",
-    "dev-server": "light-server --quiet --serve dist --port $npm_package_config_port --open --watchexp \"src/** # npm run prestart # reload\""
+    "watch:html": "onchange 'src/**/*.html' -- npm run build:html",
+    "watch:css": "onchange 'src/**/*.scss' -- npm run build:css",
+    "watch:js": "onchange 'src/**/*.js' -- npm run build:js",
+    "dev-server": "light-server --quiet --serve dist --port $npm_package_config_port --open --watchexp \"dist/**\""
   },
   "version": "1.0.0"
 }
